Fix compatibility with Java 17